Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68338

Qt shouldn't create or change the permission of XDG_RUNTIME_DIR

XMLWordPrintable

    • 55427858e3f9d98dc7a75638c54a4fffde6be73a (qt/qtbase/5.13)

      https://code.qt.io/cgit/qt/qtbase.git/tree/src/corelib/io/qstandardpaths_unix.cpp#n163 is changing the permission of standard directory or creating it https://code.qt.io/cgit/qt/qtbase.git/tree/src/corelib/io/qstandardpaths_unix.cpp#n132.
      Qt shouldn't do it, just print a warning and maybe quit.
      It is related to: https://bugreports.qt.io/browse/QTBUG-68152

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sapiippo Samuli Piippo
            karimpinter Karim Pinter
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes